# LearningFFMpeg

./: .gitignore  CMakeLists.txt  tutorial0.c  tutorial1.c  tutorial2.c
CMakeModules/: FindFFmpeg.cmake
